--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -120,7 +120,7 @@
 <div id="globalLoader">
   <div class="loader-circle"></div>
 </div>
-<div class="container bg-white p-8 md:p-12 rounded-2xl shadow-xl space-y-8 border border-gray-200">
+<div class="container bg-white p-8 md:p-12 rounded-2xl shadow-xl space-y-8 border border-gray-200 mb-24">
 
 <!-- GOOGLE AUTH -->
 <div id="googleLoginContainer" class="flex justify-center">
