--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -86,7 +86,7 @@
     
   </style>
 </head>
-<body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
+<body class="bg-gray-100 min-h-screen flex flex-col items-center justify-start p-4">
   
       <!-- === SMARTALK GLOBAL HEADER === -->
       <header class="fixed top-0 left-0 w-full z-50 bg-white shadow-md">
