--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -91,7 +91,7 @@
       <!-- === SMARTALK GLOBAL HEADER === -->
       <header class="fixed top-0 left-0 w-full z-50 bg-white shadow-md">
         <nav class="container mx-auto px-4 sm:px-6 py-2 flex items-center justify-between">
-          <a href="https://www.smartalk.online/home">
+          <a href="https://www.smartalk.online/en-home">
             <img src="https://res.cloudinary.com/dk5bqpodg/image/upload/v1756747292/smartalk_banner_ke1kkq.svg"
                  alt="Smartalk Logo" class="h-10 sm:h-12">
           </a>
