--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -112,34 +112,32 @@
 </head>
 <body class="bg-gray-100 min-h-screen flex flex-col items-center justify-start p-4">
   
-      <!-- === SMARTALK GLOBAL HEADER === -->
-      <header class="fixed top-0 left-0 w-full z-50 bg-white shadow-md">
+    <!-- Header fisso e responsivo -->
+    <header class="fixed top-0 left-0 w-full z-50 bg-white shadow-md">
+        <!-- Riduco la padding verticale (da py-3 a py-2) per compensare l'altezza del logo -->
         <nav class="container mx-auto px-4 sm:px-6 py-2 flex items-center justify-between">
-          <a href="https://www.smartalk.online/en-home">
-            <img src="https://res.cloudinary.com/dk5bqpodg/image/upload/v1756747292/smartalk_banner_ke1kkq.svg"
-                 alt="Smartalk Logo" class="h-10 sm:h-12">
-          </a>
-          <ul class="flex items-center space-x-6 sm:space-x-8 text-base sm:text-lg">
-            <li><a href="https://www.smartalk.online/about-us"
-                   class="hover:text-blue-600 transition-colors duration-300 font-semibold">About Us</a></li>
-            <li><a href="https://www.smartalk.online/#contact"
-                   class="hover:text-blue-600 transition-colors duration-300 font-semibold">Contact</a></li>
-            <li><a href="https://www.smartalk.online/dashboard"
-                   class="hover:text-blue-600 transition-colors duration-300 font-semibold">Dashboard</a></li>
-            <li class="hidden sm:block">
-              <a href="https://www.smartalk.online"
-                 class="hover:text-blue-600 transition-colors duration-300">
-                <img src="https://res.cloudinary.com/dk5bqpodg/image/upload/v1756760488/it_flag_icon_skdtam.png"
-                     alt="Italian Flag" class="w-6 h-auto rounded-full">
-              </a>
-            </li>
-          </ul>
+            <!-- Logo Smartalk ingrandito ulteriormente e reso cliccabile -->
+            <a href="https://www.smartalk.online/home">
+                <img src="https://res.cloudinary.com/dk5bqpodg/image/upload/v1756747292/smartalk_banner_ke1kkq.svg" alt="Logo Smartalk" class="h-10 sm:h-12">
+            </a>
+
+            <!-- Menu di navigazione aggiornato con testo più grande -->
+            <ul class="flex items-center space-x-6 sm:space-x-8 text-base sm:text-lg">
+                <li><a href="https://www.smartalk.online/chi-siamo" class="font-semibold hover:text-blue-600 transition-colors duration-300">Chi siamo</a></li>
+                <li><a href="https://www.smartalk.online/home#contact" class="font-semibold hover:text-blue-600 transition-colors duration-300">Contatti</a></li>
+                <li><a href="https://www.smartalk.online/dashboard" class="font-semibold text-red-600 transition-colors duration-300">Dashboard</a></li>
+                <li class="hidden sm:block">
+                    <div class="flex items-center space-x-1">
+                        <a href="https://www.smartalk.online/en-home" class="hover:text-blue-600 transition-colors duration-300">
+                            <img src="https://res.cloudinary.com/dk5bqpodg/image/upload/v1756760488/us_flag_icon_peihbg.png" alt="Bandiera Americana" class="w-6 h-auto rounded-full">
+                        </a>
+                    </div>
+                </li>
+            </ul>
         </nav>
-      </header>
+    </header>
 
-<!-- Offset for fixed header -->
-<div class="h-[56px]"></div>
-
+  
   <!-- Global loader overlay -->
 <div id="globalLoader">
   <div class="loader-circle"></div>
