--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -119,22 +119,16 @@
                  alt="Logo Smartalk" 
                  class="h-10 sm:h-12">
           </a>
-      
-          <!-- Menu -->
-          <ul class="flex items-center space-x-8 text-base sm:text-lg font-semibold">
-            <li>
-              <a href="https://www.smartalk.online/student-dashboard"
-                 class="text-gray-600 hover:text-blue-600 transition-colors duration-300">
-                Student Dashboard
-              </a>
-            </li>
-            <li>
-              <a href="https://www.smartalk.online/dashboard"
-                 class="text-red-600 border-b-2 border-red-600 pb-1">
-                Coach Dashboard
-              </a>
-            </li>
-          </ul>
+                             <!-- Menu -->
+              <ul class="flex items-center space-x-8 text-base sm:text-lg font-semibold">
+                <li>
+                  <a href="https://www.smartalk.online/student-dashboard"
+                     class="text-red-500">
+                    Dashboard
+                  </a>
+                </li>
+                </ul>
+          
         </nav>
       </header>
 
@@ -231,15 +225,14 @@ async function handleGoogleLogin(response) {
   <div id="loginSection" class="app-section">
     <div class="text-center">
       <h1 class="text-3xl md:text-4xl font-bold text-gray-800">Login</h1>
-      <p class="mt-2 text-gray-500">Use your coach credentials.</p>
     </div>
     <form id="loginForm" class="mt-8 space-y-4">
       <div>
-        <label for="coachId" class="form-label block mb-2">Coach ID</label>
+        <label for="coachId" class="form-label block mb-2">ID</label>
         <input id="coachId" class="form-input" placeholder="e.g., MA" required>
       </div>
       <div>
-        <label for="password" class="form-label block mb-2">Dashboard Password</label>
+        <label for="password" class="form-label block mb-2">Password</label>
         <input id="password" type="password" class="form-input" placeholder="Password" required autocomplete="current-password">
       </div>
       <button type="submit" id="loginBtn" class="w-full bg-blue-600 text-white font-semibold py-3 px-6 rounded-xl shadow-lg hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 disabled:bg-blue-400 disabled:cursor-not-allowed">
@@ -252,7 +245,7 @@ async function handleGoogleLogin(response) {
   <!-- DASHBOARD -->
   <div id="dashboardSection" class="hidden app-section">
     <div class="text-center">
-      <h1 class="text-3xl md:text-4xl font-bold text-gray-800">Dashboard</h1>
+      <h1 class="text-2xl md:text-3xl font-bold text-gray-800">Dashboard</h1>
       <p class="mt-2 text-gray-500">Welcome, <span id="coachNameDisplay" class="font-bold text-blue-600"></span>!</p>
     </div>
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 mt-8">
