--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -8,10 +8,11 @@
   
   <style>
     
-      html, body {
-      height: auto;
-      overflow: auto;
-      }
+    html, body {
+      height: 100%;
+      overflow: hidden;     /* blocca lo scroll interno */
+    }
+
      body {font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #f3f4f6; }
     .container { max-width: 900px; }
     .form-input { width:100%; padding:10px; border:1px solid #d1d5db; border-radius:8px; font-size:1rem; background:#fff; transition:all .2s; }
@@ -111,8 +112,8 @@
 <body class="bg-gray-100 min-h-screen flex flex-col items-center justify-start p-4">
   
       <!-- Header -->
-      <header class="w-full bg-white shadow-md">
-        <nav class="container mx-auto px-4 sm:px-6 py-2 flex items-center justify-between">
+    <header class="fixed top-0 left-0 w-full z-50 bg-white shadow-md">
+      <nav class="container mx-auto px-4 sm:px-6 py-2 flex items-center justify-between">
           <!-- Logo -->
           <a href="https://www.smartalk.online/home">
             <img src="https://res.cloudinary.com/dk5bqpodg/image/upload/v1756747292/smartalk_banner_ke1kkq.svg" 
