--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -246,8 +246,7 @@ async function handleGoogleLogin(response) {
   <!-- DASHBOARD -->
   <div id="dashboardSection" class="hidden app-section">
     <div class="text-center">
-      <h1 class="text-2xl md:text-3xl font-bold text-gray-800">Dashboard</h1>
-      <p class="mt-2 text-gray-500">Welcome, <span id="coachNameDisplay" class="font-bold text-blue-600"></span>!</p>
+      <h1 class="text-2xl md:text-3xl font-bold text-gray-600">Welcome, <span id="coachNameDisplay" class="font-bold text-blue-600"></span>!</h1>
     </div>
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 mt-8">
       <div id="monthlyEarningsDisplay" class="cube-button bg-blue-600 text-white cursor-default">
