--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -358,26 +358,88 @@ async function handleGoogleLogin(response) {
     <div id="loginMessageBox" class="mt-4 p-4 rounded-xl text-center hidden"></div>
   </div>
 
-  <!-- DASHBOARD -->
-  <div id="dashboardSection" class="hidden app-section">
-    <div class="text-center">
-      <h1 class="text-2xl md:text-3xl font-bold text-gray-600">Welcome, <span id="coachNameDisplay" class="font-bold text-blue-600"></span>!</h1>
-    </div>
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 mt-8">
-      <div id="monthlyEarningsDisplay" class="cube-button bg-blue-600 text-white cursor-default">
-        <p class="text-lg font-medium opacity-80">Monthly Earnings</p>
-        <p class="mt-2 text-4xl sm:text-5xl font-bold"><span id="earningsAmount">--</span>€</p>
-      </div>
-      <button id="logCallBtn" class="cube-button bg-green-600 text-white"><span class="text-4xl">📝</span><p class="mt-2 text-lg font-semibold">Log a new call</p></button>
-      <button id="viewCallLogBtn" class="cube-button bg-purple-600 text-white"><span class="text-4xl">📖</span><p class="mt-2 text-lg font-semibold">Call log</p></button>
-      <button id="viewStudentsBtn" class="cube-button bg-orange-600 text-white"><span class="text-4xl">🧑‍🎓</span><p class="mt-2 text-lg font-semibold">Students</p></button>
-      <button id="viewCoachingDebriefBtn" class="cube-button bg-indigo-600 text-white">  <span class="text-4xl">📝</span>  <p class="mt-2 text-lg font-semibold">Coaching Debrief</p></button>
-      <button id="viewReportCardsBtn" class="cube-button bg-teal-600 text-white"><span class="text-4xl">📈</span><p class="mt-2 text-lg font-semibold">Report Cards</p></button>
-      <button id="viewFlashcardsBtn" class="cube-button bg-pink-600 text-white"><span class="text-4xl">🃏</span><p class="mt-2 text-lg font-semibold">Flashcards</p></button>
-      <button id="viewFolderBtn" class="cube-button bg-gray-600 text-white"><span class="text-4xl">📂</span><p class="mt-2 text-lg font-semibold">My payment folder</p></button>
-      <button id="logoutBtn" class="cube-button bg-red-600 text-white sm:col-span-2 lg:col-span-1"><span class="text-4xl">🚪</span><p class="mt-2 text-lg font-semibold">Log out</p></button>
+<!-- DASHBOARD -->
+<div id="dashboardSection" class="hidden app-section">
+  <div class="text-center mb-6">
+    <h1 class="text-2xl md:text-3xl font-bold text-gray-700">
+      Welcome, <span id="coachNameDisplay" class="text-blue-600"></span>!
+    </h1>
+  </div>
+
+  <!-- 🔸 BUTTON GRID (8 BUTTONS) -->
+  <div class="grid grid-cols-2 sm:grid-cols-4 gap-6 mb-8">
+    <button id="logCallBtn" class="card g-green p-6 flex flex-col justify-center items-center text-white">
+      <span class="text-4xl mb-2">📝</span>
+      <p class="text-lg font-semibold">Log a new call</p>
+    </button>
+
+    <button id="viewCallLogBtn" class="card g-purple p-6 flex flex-col justify-center items-center text-white">
+      <span class="text-4xl mb-2">📖</span>
+      <p class="text-lg font-semibold">Call History</p>
+    </button>
+
+    <button id="viewStudentsBtn" class="card g-orange p-6 flex flex-col justify-center items-center text-white">
+      <span class="text-4xl mb-2">🧑‍🎓</span>
+      <p class="text-lg font-semibold">Students</p>
+    </button>
+
+    <button id="viewReportCardsBtn" class="card g-teal p-6 flex flex-col justify-center items-center text-white">
+      <span class="text-4xl mb-2">📈</span>
+      <p class="text-lg font-semibold">Report Cards</p>
+    </button>
+
+    <button id="viewCoachingDebriefBtn" class="card g-blue p-6 flex flex-col justify-center items-center text-white">
+      <span class="text-4xl mb-2">🗒️</span>
+      <p class="text-lg font-semibold">Coaching Debrief</p>
+    </button>
+
+    <button id="viewFlashcardsBtn" class="card g-pink p-6 flex flex-col justify-center items-center text-white">
+      <span class="text-4xl mb-2">🃏</span>
+      <p class="text-lg font-semibold">Flashcards</p>
+    </button>
+
+    <button id="viewFolderBtn" class="card g-gray p-6 flex flex-col justify-center items-center text-white">
+      <span class="text-4xl mb-2">📂</span>
+      <p class="text-lg font-semibold">My Folder</p>
+    </button>
+
+    <!-- Segnaposto per l'ottavo slot -->
+    <div class="card bg-gray-200 p-6 flex flex-col justify-center items-center text-gray-500 italic">
+      Coming soon
     </div>
   </div>
+
+  <!-- 🔸 LARGE BLOCKS: EARNINGS + BULLETIN -->
+  <div class="grid grid-cols-1 sm:grid-cols-3 gap-6 mb-8">
+    <!-- Monthly Earnings -->
+    <div class="card g-yellow sm:col-span-1 sm:row-span-2 flex flex-col justify-center items-center text-white p-8">
+      <div class="label mb-1">Monthly Earnings</div>
+      <div class="metric text-5xl"><span id="earningsAmount">--</span>€</div>
+    </div>
+
+    <!-- Bulletin Board -->
+    <div class="card g-red sm:col-span-2 flex flex-col justify-between text-white p-8">
+      <h2 class="text-xl font-bold mb-2">Bulletin Board</h2>
+      <p class="text-sm opacity-90">Announcements, updates, and internal notes will appear here.</p>
+    </div>
+  </div>
+
+  <!-- 🔸 CALENDAR PREVIEW -->
+  <div class="card g-blue text-white p-8 mb-8">
+    <h2 class="text-xl font-bold mb-4">Upcoming Lessons</h2>
+    <p class="text-sm opacity-90">Calendar preview section — placeholder for upcoming sessions.</p>
+  </div>
+
+  <!-- 🔸 LOGOUT BUTTON -->
+  <button id="logoutBtn" 
+          class="w-full bg-red-600 hover:bg-red-700 text-white font-semibold py-4 px-6 rounded-xl shadow-lg flex justify-center items-center gap-2 text-lg">
+    <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a2 2 0 01-2 2H5a2 2 0 01-2-2V7a2 2 0 012-2h6a2 2 0 012 2v1" />
+    </svg>
+    Log Out
+  </button>
+</div>
+
 
   <!-- CALL FORM -->
     <div id="callSection" class="hidden app-section">
