--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -220,6 +220,68 @@ nav ul a:hover {
   color: #0056d6;
 }
 
+/* ===========================
+   🎯 SMARTALK DASHBOARD GRID
+=========================== */
+
+/* Griglia principale dei pulsanti (8 in 2 righe) */
+#dashboardSection .grid.grid-cols-2.sm\:grid-cols-4 {
+  grid-auto-rows: 160px; /* altezza bottoni uniformi */
+}
+
+/* Card dei bottoni principali */
+#dashboardSection .card {
+  border-radius: 16px;
+  box-shadow: 0 6px 18px rgba(0,0,0,.12);
+  transition: transform .25s ease;
+}
+#dashboardSection .card:hover {
+  transform: translateY(-4px);
+}
+
+/* Blocchi grandi (Earnings + Bulletin) */
+#dashboardSection .g-yellow,
+#dashboardSection .g-red {
+  min-height: 320px;
+}
+
+/* Blocco calendario */
+#dashboardSection .g-blue {
+  min-height: 380px;
+}
+
+/* Bottone logout lungo e basso */
+#logoutBtn {
+  margin-top: 2rem;
+  height: 70px;
+  font-size: 1.15rem;
+  letter-spacing: .5px;
+}
+#logoutBtn svg {
+  width: 26px;
+  height: 26px;
+}
+
+/* Responsive */
+@media (max-width: 640px) {
+  #dashboardSection .grid.grid-cols-2.sm\:grid-cols-4 {
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 130px;
+  }
+  #dashboardSection .g-yellow,
+  #dashboardSection .g-red {
+    min-height: 260px;
+  }
+  #dashboardSection .g-blue {
+    min-height: 300px;
+  }
+  #logoutBtn {
+    height: 60px;
+    font-size: 1rem;
+  }
+}
+
+  
 </style>
 
 
@@ -445,7 +507,7 @@ async function handleGoogleLogin(response) {
     <div id="callSection" class="hidden app-section">
   <div class="flex items-center justify-between mb-6 flex-col sm:flex-row">
     <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-4 sm:mb-0">Log a new call</h2>
-    <button id="backToDashboardFromReportsBtn" class="bg-gray-400 text-white font-semibold py-2 px-4 rounded-xl shadow-lg hover:bg-gray-500">
+    <button id="backToDashboardFromStudentsBtn" class="bg-gray-400 text-white font-semibold py-2 px-4 rounded-xl shadow-lg hover:bg-gray-500">
       Back to Dashboard
     </button>
   </div>
