--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -582,7 +582,7 @@ async function handleGoogleLogin(response) {
 </div>
 
 <script src="https://accounts.google.com/gsi/client" async defer></script>
-<script src="scripts/dashboard.js"></script>
+<script src="./scripts/dashboard.js"></script>
 
 </body>
 </html>
