--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -35,65 +35,7 @@
 
 
 <script src="https://accounts.google.com/gsi/client" async defer></script>
-<script>
-
- // Global overlay loader controls
-function showGlobalLoader() {
-  const el = document.getElementById('globalLoader');
-  if (el) el.style.display = 'flex';
-}
-function hideGlobalLoader() {
-  const el = document.getElementById('globalLoader');
-  if (el) el.style.display = 'none';
-}
  
-  
-async function handleGoogleLogin(response) {
-  showGlobalLoader(); // 👈 overlay a schermo intero
-
-  try {
-    const credential = response.credential; 
-    const resp = await apiPost("loginWithGoogle", { credential });
-
-    if (!resp.success) {
-      showToast("Google login fallito: " + resp.error, 5000, "bg-red-600");
-      location.reload(); 
-      return;
-    }
-
-    document.getElementById('googleLoginContainer').classList.add('hidden');
-
-    CURRENT_COACH_ID = resp.coachId;
-    CURRENT_COACH_NAME = resp.coachName;
-    CURRENT_COACH_ROLE = resp.role;
-        // Persist session
-    localStorage.setItem("coachSession", JSON.stringify({
-      id: CURRENT_COACH_ID,
-      name: CURRENT_COACH_NAME,
-      role: CURRENT_COACH_ROLE
-    }));
-
-    coachNameDisplay.textContent = CURRENT_COACH_NAME;
-    callSectionCoachNameDisplay.textContent = CURRENT_COACH_NAME;
-
-    switchSection(dashboardSection);
-
-    hideGlobalLoader(); // 👈 chiudiamo subito, l’utente entra in dashboard
-
-    // caricamenti secondari (non bloccano l’UI)
-    await fetchMonthlyEarnings();
-    await loadStudentIds();
-  } catch (err) {
-    showToast("Errore login Google: " + (err.message || err), 5000, "bg-red-600");
-  } finally {
-    hideGlobalLoader(); // 👈 safety net in caso di errori
-  }
-}
-
-
-</script>
-
-  
   
   <!-- LOGIN -->
   <div id="loginSection" class="app-section">
@@ -582,7 +524,7 @@ async function handleGoogleLogin(response) {
 </div>
 
 <script src="https://accounts.google.com/gsi/client" async defer></script>
-<script src="https://www.smartalk.online/scripts/dashboard.js"></script>
+<script src="./scripts/dashboard.js"></script>
 
 </body>
 </html>
