--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -524,7 +524,7 @@
 </div>
 
 <script src="https://accounts.google.com/gsi/client" async defer></script>
-<script src="scripts/dashboard2.js"></script>
+<script src="scripts/dashboard.js"></script>
 
 </body>
 </html>
