--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -77,7 +77,10 @@
       <button id="viewReportCardsBtn" class="cube-button bg-teal-600 text-white"><span class="text-4xl">📈</span><p class="mt-2 text-lg font-semibold">Report Cards</p></button>
       <button id="viewFlashcardsBtn" class="cube-button bg-pink-600 text-white"><span class="text-4xl">🃏</span><p class="mt-2 text-lg font-semibold">Flashcards</p></button>
       <button id="viewFolderBtn" class="cube-button bg-gray-600 text-white"><span class="text-4xl">📂</span><p class="mt-2 text-lg font-semibold">My payment folder</p></button>
-      <button id="logoutBtn" class="cube-button bg-red-600 text-white sm:col-span-2 lg:col-span-1"><span class="text-4xl">🚪</span><p class="mt-2 text-lg font-semibold">Log out</p></button>
+      <button id="logoutBtn" class="w-full bg-red-600 text-white font-semibold py-3 px-6 rounded-xl shadow-lg hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-opacity-50 flex items-center justify-center gap-2 mt-4">
+        <span class="text-xl">⎋</span>
+        <span>Log out</span>
+      </button>
     </div>
   </div>
 
