--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -113,13 +113,11 @@
         <p class="mt-2 text-lg font-semibold">Bulletin Board</p>
       </div>
         <!-- 4ª riga (calendario largo doppio e alto doppio) -->
-      <div class="cube-button bg-slate-200 text-gray-700 lg:col-span-4 h-64 cursor-default">
+      <div id="calendarPlaceholder" class="cube-button bg-slate-200 text-gray-700 lg:col-span-4 cursor-default">
         <span class="text-5xl">📅</span>
         <p class="mt-4 text-lg font-semibold">Calendar (Coming soon)</p>
       </div>
-    </div>
-  
-    <!-- LOGOUT -->
+      <!-- LOGOUT -->
     <button
       id="logoutBtn"
       class="w-full bg-red-600 text-white font-semibold py-3 px-6 rounded-xl shadow-lg hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-opacity-50 flex items-center justify-center gap-2 mt-8"
